hooked up disk view button

--- a/src/index.html
+++ b/src/index.html
@@ -394,10 +394,10 @@
 
 
                 <!-- DISK USAGE CHART -->
-                <div class="title" id='btn_disk_usage'>
+                <!-- <div class="title" id='btn_disk_usage'>
                     <i class="icon bi-bar-chart large"></i>
                     Disk Usage
-                </div>
+                </div> -->
                 <!-- <div class="content">
                     <canvas id="myChart" width="200" height="200" class="" style=""></canvas>
                 </div> -->
