--- a/src/index.html
+++ b/src/index.html
@@ -312,17 +312,6 @@
                     </div>
                 </div>
 
-                <!-- DEVICES -->
-                <div class="title" title="connected devices">
-                    <span id="btn_getdrives" class="" title="">
-                        <i class="icon bi-tablet large"></i>
-                        Devices
-                    </span>
-                </div>
-                <div class="content active">
-                    <div class="navigate" id="device_grid"></div>
-                </div>
-
                 <!-- ROOT DIRECTORIES -->
                 <div class="title" id="btn_getroot">
                     <i class="icon bi-hdd large"></i>
@@ -333,14 +322,25 @@
                     </div>
                 </div>
 
+                <!-- DEVICES -->
+                <div class="title" title="connected devices">
+                    <span id="btn_getdrives" class="" title="">
+                        <i class="icon bi-tablet large"></i>
+                        Devices
+                    </span>
+                </div>
+                <div class="content active" style="margin-left:25px;">
+                    <div class="navigate" id="device_grid"></div>
+                </div>
+
 
                 <!-- NETWORK -->
-                <div class="title" id="btn_network">
+                <!-- <div class="title" id="btn_network"> -->
                     <!-- <i class="sitemap alternative large icon"></i> -->
-                    <i class="icon bi-hdd-network large"></i>
-                    Network
-                </div>
-                <div class="content">
+                    <!-- <i class="icon bi-hdd-network large"></i> -->
+                    <!-- Network -->
+                <!-- </div> -->
+                <!-- <div class="content"> -->
 
                     <!-- <div id="accordion_network" class="ui accordion">
                         <div class="title" title="show home folders">
@@ -365,8 +365,8 @@
 
                     <!-- <div class="ui card fluid" style="border:none"> -->
                         <!-- <div class="content" id=""> -->
-                            <div class="navigate" id="network_grid" data-id="network" style="overflow:none">
-                            </div>
+                            <!-- <div class="navigate" id="network_grid" data-id="network" style="overflow:none"> -->
+                            <!-- </div> -->
                         <!-- </div> -->
                     <!-- </div> -->
 
@@ -392,7 +392,7 @@
                     </div> -->
 
 
-                </div>
+                <!-- </div> -->
 
 
 
@@ -416,7 +416,7 @@
 
                 </div>
 
-                <br />
+                <!-- <br /> -->
 
                 <!-- <button style="position: fixed; bottom: 0;" class="" id="toggle-dark-mode">Toggle Dark Mode</button> -->
                 <!-- <button id="reset-to-system">Reset to System Theme</button>
