--- a/src/index.html
+++ b/src/index.html
@@ -172,22 +172,22 @@
                         <!-- </div> -->
                     </a>
 
-                    <a class="item button" id="sort_by_date" title="Sort by Date">
+                    <a class="item button" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
                         <i class="small icon sort amount down"></i>
                         <!-- Sort by date -->
                     </a>
 
-                    <a class="item" id="sort_by_name" title="Sort by Name">
+                    <a class="item" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
                         <i class="icon sort alphabet down small"></i>
                         <!-- Sort by name -->
                     </a>
 
-                    <a class="item" id="sort_by_size" title="Sort by Size">
+                    <a class="item" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
                         <i class="icon sort amount down small"></i>
                         <!-- Sort by size -->
                     </a>
 
-                    <a class="item" id="sort_by_type" title="Sort by Type">
+                    <a class="item" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
                         <i class="icon sort file alternative outline down small"></i>
                         <!-- Sort by type -->
                     </a>
@@ -366,7 +366,7 @@
                         Devices
                     </span>
                 </div>
-                <div class="content active" style="margin-left:25px;">
+                <div id="device_content" class="content active" style="margin-left:2px;">
                     <div class="navigate" id="device_grid"></div>
                 </div>
 
