workspace drag and drop

--- a/src/index.html
+++ b/src/index.html
@@ -341,19 +341,19 @@
                 </div> -->
 
                 <!-- WORKSPACE -->
-                <div class="title" id="workspace"
-                    title="ctrl+shift+click on a file or directory to add it to your workspace">
+                <!-- <div class="title" id="workspace" -->
+                    <!-- title="ctrl+shift+click on a file or directory to add it to your workspace"> -->
                     <!-- <i class="icon bi-clipboard large"></i> -->
-                    Workspace
-                </div>
-                <div class="content" id="workspace_content">
-                    <div class="navigate" id="workspace_grid"></div>
-                    <a href="#" id="clear_workspace">
+                    <!-- Workspace -->
+                <!-- </div> -->
+                <!-- <div class="content" id="workspace_content"> -->
+                    <!-- <div class="navigate" id="workspace_grid"></div> -->
+                    <!-- <a href="#" id="clear_workspace"> -->
                         <!-- <i class="icon eraser"></i> -->
-                        clear workspace
-                    </a>
+                        <!-- clear workspace -->
+                    <!-- </a> -->
 
-                </div>
+                <!-- </div> -->
 
                 <!-- ROOT DIRECTORIES -->
                 <div class="title" id="btn_getroot">
